kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular
        image: devcr01.azurecr.io/angular-cosmosdb:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 3
          timeoutSeconds: 1
