kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: angular
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  namespace: default 
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: angular
